Speed up NodeCache (#710)